--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -104,6 +104,10 @@
 		That why DataHives has been recast.
 	\subsection{DataHives \#2 recast}
 		\paragraph{} The recast makes the system more easy to use and more stand alone.
+		\paragraph{Evaluation \& Fitness.} The cycle has been updated, from this :
+			"Navigate, Act, Communicate" to "Navigate, Act, Communicate, Evaluate".
+			This evalutation is based on a fitness function that says if the agent fits or not,
+			if it fitness is too low, we kill it.
 
 \newpage
 
