--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -51,12 +51,12 @@
 	\paragraph{} % Global presentation of RDF : The semantic web \& RDF
 		Since its creation, the web see its data increasing exponentially.
 		Those data are often unstructured and only human readable.
-		Facing those two problems, scientists invented the semantic web to agregate data
+		Facing those two problems, scientists invented the semantic web to aggregate data
 		and make it easy to access for humans and computers.
-		Those metadata are structured in triples that are stored online in a lot of different places in RDF
+		Those meta-data are structured in triples that are stored online in a lot of different places in RDF
 		(Resource Description Framework).
 		Each triple is made of a subject, a predicate and an object.
-		We can see it as 2 nodes and an arc from the subject to the object, thus we get an oriented graph.
+		We can see it as 2 nodes and an arc (predicate) from the subject to the object, thus we get an oriented graph.
 		Also, there are several ways to store this data online.
 	\paragraph{}	% Data format
 		The most common one is to put the data on a database and query it via SPARQL,
@@ -64,11 +64,11 @@
 		Then we can send a query and get back some results that are in that database.
 		As for SQL, SPARQL could built some complicated queries.
 		The other common way of getting data is directly get files containing RDF in it (turtle, rdf, n3).
-		The las one is by deferencing which i a mix of the two :
+		The last one is by deferencing which is a mix of the two :
 		it ask the server for data about a resource and get a file containing the data.
 	\paragraph{}	%Introduction to other work
 		Last year, another bachelor student worked on a similar project.
-		His goal was to get back information from a search using agents acting like bees (in javascript) \cite{Kroes13}.
+		His goal was to get back information from a search using agents acting like bees (in JavaScript) \cite{Kroes13}.
 		We used his code as inspiration for our own bees agents (that are in prolog).
 		That work was based on a paper \cite{Gueret10} about Swarm computing.
 	%	\paragraph{}	%Introduction to DataHives project
@@ -122,17 +122,17 @@
 			and implementing functions was thus hard to do.
 			It took me 3 days to understand how to load a store in local to work on it !
 		\subsubsection{Work on DataHives \#1}
-			\paragraph{} This is a submodule of the project Pragmatic Semantic.
+			\paragraph{} This is a sub-module of the project Pragmatic Semantic.
 			It already has random agents implemented.
 			Those agents are defined by a cycle of action they perform : Navigate / Act / Communicate.
 			The random agent go somewhere random, don't act nor communicate.
-			We will implement naviguation, action and communication functions step by step,
+			We will implement navigation, action and communication functions step by step,
 			adding a few feature at a time to be sure to get something working in the end.
-			The web interface will show where did the agents went (could be useful for qualitative evalutation).
+			The web interface will show where did the agents went (could be useful for qualitative evaluation).
 			\paragraph{} To start the local server, we had to launch a command from the Pragmatic Semantic folder.
-			The purpose of this command was to laucnh the local server.
+			The purpose of this command was to launch the local server.
 			Then, on it, we could start some random agents using the simple dh\_test(\_) in prolog.
-			After that, the visualization of the agents and their progress is at the web adresse localhost:3040.
+			After that, the visualization of the agents and their progress is at the web address localhost:3040.
 			Unfortunately, the heavy structure was quite hard to manipulate correctly and didn't make a stand alone system.
 			That why DataHives has been recast.
 		\subsubsection{DataHives \#2 (recast)}
@@ -140,12 +140,12 @@
 				The system also produced a picture of the crawled graph (100 most visited edges and their induced nodes).
 			\paragraph{Evaluation \& Fitness.} The cycle has been updated, from this :
 				"Navigate, Act, Communicate" to "Navigate, Act, Communicate, Evaluate".
-				This evalutation is based on a fitness function that says if the agent fits or not,
+				This evaluation is based on a fitness function that says if the agent fits or not,
 				if it fitness is too low (typically below $0.5$), we kill it.
 				For now, the fitness function is only a count of deduced information over the number of steps taken.
 				But it will have some new features like taking dead end into account or
 				fitness compare to a set of predefined triples.
-			\paragraph{Rating the edges} is now really basic : if an agent go over an edge it leaves a virtual pheronmon,
+			\paragraph{Rating the edges} is now really basic : if an agent go over an edge it leaves a virtual pheromone,
 				but soon we'll have some more complicated functions to devalue certain path if they lead to dead ends or
 				if they don't lead to good information (depending on the previous described fitness function)
 
@@ -158,10 +158,12 @@
 		Navigate / Act / Communicate / Evaluate
 	\end{center}
 	\paragraph{}
-		Navigation is the function that decide WHERE the agent should go, depending on where it is already.
+		Navigation is the function that decide \textbf{where} the agent should go, depending on where it is already.
 		In facts, this predicate pick a proposition between all the possibilities,
 		those possibilities are all nodes that are neighbours to the one we are on.
-		Unfortunately, thoses nodes could be literals and then we could get stuck on it because literals are linked to nothing.
+		The graph containing all the neighbours is called the ego-graph of the choosen node,
+		we assume it contains all the incomming and out going neighbours.
+		Unfortunately, those nodes could be literals and then we could get stuck on it because literals are linked to nothing.
 		To avoid that, we have a backtrack function that keeps in mind the last position we were on.
 	\paragraph{}
 		Acting is where the agent do what it is meant for when it is on his own.
@@ -172,12 +174,12 @@
 		We apply all of them to get some more information.
 		Because all agents will have the same action, we decide to describe it here.
 	\paragraph{}
-		Communication is the main point of thoses agents.
+		Communication is the main point of those agents.
 		We try different kind of communication to see whether one is more efficient than the other
 		and then compare the different kind of agents.
 	\paragraph{}
-		The evaluation part decides wether an agent diserve to continue his job or not.
-		If it is judge inneficient then we throw it away using the exit function given at the creation of the agent.
+		The evaluation part decides whether an agent deserve to continue his job or not.
+		If it is judge inefficient then we throw it away using the exit function given at the creation of the agent.
 		It's here where the fitness function should act.
 	\subsection{Random Agent}
 		\subsubsection{Navigate}
@@ -199,15 +201,15 @@
 		\subsubsection{Navigate}
 			\paragraph{}
 			The ant navigation is based on randomness but a weighted one.
-			Like an ordinary ant, our agent has to pick a path, depending on the pheromons left on it.
-			On the virtual web of the LOD, the pheromons are coeficient left on edges from one node to the other.
+			Like an ordinary ant, our agent has to pick a path, depending on the pheromones left on it.
+			On the virtual web of the LOD, the pheromones are coefficient left on edges from one node to the other.
 			If another ant went here before, the path get more value.			
 		\subsubsection{Communicate}
 			\paragraph{}
-			As said above, an ant leave pheromons in an intelligent way.
+			As said above, an ant leave pheromones in an intelligent way.
 			The insect is looking for food (= information) outside (= on the LOD).
-			When it has found something, it goes back to the anthill and leave pheromons on its way back as well.
-			The main idea here is to upvalue a path which leads to food and devalue one that leads nowhere (ie dead-end path).
+			When it has found something, it goes back to the anthill and leave pheromones on its way back as well.
+			The main idea here is to up value a path which leads to food and devalue one that leads nowhere (ie dead-end path).
 			To represent this in a virtual way here was our main ideas $c \in \mathbb{R}$:
 			\begin{itemh}
 				\item Devalue dead end path, using SPARQL queries to go back and degrade the weight of the path of $c$
@@ -221,7 +223,7 @@
 			The evaluation is where the fitness function enter in the game.
 			For the ants, the fitness function is quantitative,
 			counting the number of triples discovered via deduction and dividing it by the number of steps taken.
-			If that number is bigger than 0.5, the agent can live, otherwise it dies lauching the exit function.
+			If that number is bigger than 0.5, the agent can live, otherwise it dies launching the exit function.
 		\subsubsection{At exit}
 			\paragraph{}
 			When the time comes for an agent to kill himself, it is decided that it must launch another agent to replace him.
@@ -239,7 +241,7 @@
 			The information send is used instantly (it makes it more easy to set up).
 		\subsubsection{Evaluate}
 			\paragraph{}
-			The evaluation is based on the same criteria aof the one for the ants but here it trigger an action.
+			The evaluation is based on the same criteria of the one for the ants but here it trigger an action.
 			If the fitness is big enough we send some foragers helping the scout, but if it is too low ... the agent get killed.
 		\subsubsection{At exit}
 			\paragraph{}
@@ -250,40 +252,69 @@
 		\paragraph{}
 			First, we want to compare the agents over the number of deductions over the time they are running.
 			It is something simple to count and objective, but it may be not relevant (if we look at the semantic part).
-			To be more accurate, we will use 10 agents in waves of five.	% Because I decided so
+			To be more accurate, we have used 100 agents of each category, and run them for a certain time.
 			Of course, it is running on the same machine to have the same environment as much as possible.
 		\begin{center}
-			\begin{tabular}{|l|c|c|c|}
-				\hline
-				& Random & Bee & Ants\\
-				\hline
-				Time wave \#1 & 11 & 12 & 3 \\
-				Time wave \#2 & 9  & 12 & 3 \\
-				Time wave \#3 & 12 & 12 & 3 \\
-				Time wave \#4 & 11 & 12 & 3 \\
-				Time wave \#5 & 11 & 12 & 3 \\
-				Time wave \#6 & 11 & 12 & 3 \\
-				Time wave \#7 & 11 & 12 & 3 \\
-				Time wave \#8 & 11 & 12 & 3 \\
-				Time wave \#9 & 12 & 12 & 3 \\
-				Time wave \#10& 11 & 12 & 3 \\
-				\hline
-				Average time  & 11 & 12 & 3 \\
-				\hline
-			\end{tabular}
+			\textit{Place for a future graph, comparing agents x = time, y = deductions}
 		\end{center}
+		\paragraph{}
+			Description of the graph and deductions
 	\subsection{Robustness evaluation}
 		\paragraph{}
 			Our second evaluation will measure the bot robustness by counting the number of deaths
 			in a certain time / steps / number of deductions
+		\begin{center}
+			\textit{Place for a future graph, comparing agents x = time, y = deaths}
+		\end{center}
+		\paragraph{}
+			Description of the graph and deductions
 	\subsection{Fitness evolution}
 		\paragraph{}
 			Measuring how the fitness is evolving over time / number of steps to compare population of agents
+		\begin{center}
+			\textit{Place for a future graph, comparing agents x = time, y = deductions}
+		\end{center}
+		\paragraph{}
+			Description of the graph and deductions
 
 \section{Main Problems faced}
-	\subsection{Dead ends paths}
+	\subsection{Dead end paths}
+		\paragraph{}
+			The LOD is a big graph on which it is really easy to get lost.
+			Especially in some dead end path, because the graph is oriented and going back is not easy.
+			We have a backtrack function in case of which we would have arrived on a literal (special case),
+			But this backtrack function is only limited to go one step backward.
+			Storing the whole path would be memory unefficient.
+		\paragraph{}
+			To solve this, we start an action when an agent detect when it is in a dead end path (when it can't go anywhere).
+			This specific action is quite simple, it start from the node wher the agent got stuck and devalue the path to it.
+			To know the path, we just crawl the cache starting from the "stucking node"
+			and see if there is other possibilites that the one we come from.
+			If yes, it means that the node we just arrived on is the end of the dead end path.
+			If no, we just repeat the previous step to find that node which show the end of the path.
+			Also, we kill the agent and create a new one instead that will crawl from another place.
 	\subsection{Denied access}
-	\subsection{Lot of deaths}
+		\paragraph{}
+			The LOD contains some retricted area we the agents cannot go.
+			When an agent meet such a place, it just go backward of one step.
+			Sometimes, it is also because the server where we try to grab information from is down.
+			Some of them, like dbpedia have a live version of it which is sometime replacing the other one,
+			so we just try all different access point we knows to get data from.
+	\subsection{Difficult tests}
+		\paragraph{}
+			At the beginning, the agents used to go really often in dead en alley
+			or find information that is not in the right format and crashed.
+			That made the testing quite complicated, because the data we got from those agent was too diverse to be relevant.
+			The agents were to often far apart from each other (and the communication was quite useless then).
+	\subsection{Keep as minimum the communication between threads}
+		\paragraph{}
+			Even if we want the agents to communicate with each other, it is better if their communication remain light,
+			otherwise, they spend too much time waiting for each other and the efficiency becomes bad.
+			For example, the system we work on don't have a kind of mothership that give orders.
+			Each agent is working on his own and has is own independants functions.
+		\paragraph{}
+			A necessary communication that has been establish between threads is a message system to get information about the thread,
+			like the number of steps taken.
 
 \newpage
 \section{Conclusion}
@@ -294,7 +325,7 @@
 		\paragraph{}
 			I would like to thanks the VU university from Amsterdam to makes me able to study here for this year.
 			I also want to thanks Stefan for accepting me to do my Bachelor thesis with him
-			and I escially thanks Wouter for his help during all this project.
+			and I especially thanks Wouter for his help during all this project.
 
 \newpage
 \bibliographystyle{plain}
