Report almost drafty

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -1,8 +1,13 @@
-
-@MastersThesis {Kroes13,
+@Misc {Kroes13,
 	title = {DataHives: Swarm-Based Triple Store Enhancement},
-	author = {Pepijn Kroes, Wouter Beek, Stefan Schlobach},
-	school = {Vrije Universiteit Amsterdam, THE NETHERLANDS},
+	author = {Pepijn Kroes and Wouter Beek and Stefan Schlobach},
+	year = 2013
+}
+
+@InProceedings{Kroes13-2,
+	title = {DataHives: Triple Store Enhancement Using A Bee Calculus},
+	booktitle = {Proceedings of the 25th Belgium-Netherlands Artificial Intelligence Conference},
+	author = {Pepijn Kroes and Wouter Beek and Stefan Schlobach},
 	year = 2013
 }
 
@@ -12,4 +17,27 @@
     year      = {2010},
     address   = {The Netherlands},
     institution = {Vrije Universiteit Amsterdam}
+}
+
+@Book{Grigoris12,
+	title = {A Semantic Web Primer},
+	author = {Grigoris Antoniou and Paul Groth and Frank van Harmelen and Rinke Hoekstra},
+	year = 2012,
+	edition = "Third",
+	publisher = {The MIT Press}
+}
+
+@Book{Engelbrecht05,
+	title = {Fundamentals of Computational swarm intelligence},
+	author = {Andries P. Engelbrecht},
+	year = 2005,
+	publisher = {John Wiley},
+	isbn = 0470091916
+}
+
+@Book{Steen10,
+	title = {Graph Theory and Complex Networks, An Introduction},
+	author = {Maarten van Steen},
+	year = 2010,
+	publisher = {}
 }
