--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -39,7 +39,7 @@
 	Our goal is to create agents that performs that reasoning base on the ants behaviour
 	and compare them to the bee agents we already have, created last year by Christophe Guéret.
 	Those agents are coded in JavaScript and perform as a Web application that any client can use,
-	an example of the preexisting project can be found here \url{http://wouterblog.com/} .
+	an example of the pre-existing project can be found here \url{http://wouterblog.com/} .
 }
 
 \newpage
@@ -54,7 +54,7 @@
 		Since its creation, the web see its data increasing exponentially.
 		Those data are often unstructured and only human readable.
 		Facing those two problems, scientists invented the semantic web to aggregate data
-		and make it easy to access for humans and computers.
+		and make it easy to access for humans and computers.\cite{Grigoris12}
 		Those meta-data are structured in triples that are stored online in a lot of different places in RDF
 		(Resource Description Framework).
 		Each triple is made of a subject, a predicate and an object.
@@ -70,9 +70,11 @@
 		it ask the server for data about a resource and get a file containing the data.
 	\paragraph{}	%Introduction to other work
 		Last year, another bachelor student worked on a similar project.
-		His goal was to get back information from a search using agents acting like bees (in JavaScript) \cite{Kroes13}.
-		We used his code as inspiration for our own bees agents (that are in prolog).
+		His goal was to get back information from a search using agents acting like bees (in JavaScript) \cite{Kroes13,Kroes13-2}.
+		We used his code as inspiration for our own bees agents (that are programmed in prolog).
 		That work was based on a paper \cite{Gueret10} about Swarm computing.
+		The project repository is on GitHub\footnote{\url{https://github.com/wouterbeek/DataHives}},
+		it is mostly using SWI-Prolog\footnote{Official web-site: \url{http://swi-prolog.org/}} language.
 	%	\paragraph{}	%Introduction to DataHives subsection
 	%	\project{Hypothesis}
 		\begin{center}
@@ -91,14 +93,15 @@
 			We will also variate the number of agents to see if there are some big variations or not (saturation ?).
 			Those two methods will be used to compare 3 kind of agents:
 		\begin{itemh}
-			\item Random (base)
-			\item Bee (already implemented in another language)
-			\item Ant (to be implemented)
+			\item Random (basic)
+			\item Bee (translated from JavaScript)
+			\item Ant (Implemented from scratch)
 		\end{itemh}
 
 \newpage
 \section{Agents details \& behaviour}
 	\paragraph{}
+		Our work on the agents is based on this book \cite{Engelbrecht05}.
 		All the agents are implemented in the same way.
 		They follow a cycle of events and repeat that cycle.
 		The cycle to follow is :
@@ -118,7 +121,7 @@
 		In a clearer way it means that in this step the agent should work on the nodes it is on.
 		This step is a selfish one where the other agents don't matter at all.
 		The main action is only the deductive action of entailment.
-		The rules for that can be found on the W3C web page \url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/#rdfs-entailment}.
+		The rules for that can be found on the W3C web page\footnote{\url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/\#rdfs-entailment}}.
 		We apply all of them to get some more information.
 		Because all agents will have the same action, we decide to describe it here.
 	\paragraph{}
@@ -200,6 +203,11 @@
 	\paragraph{}
 		This section will present to you what features already implemented in the project are in use.
 		What we have access in this interface to the graph the agents have been crawling.
+		It is a way of visualize the graph that as been created by the agents.
+		It has also been used as a debug tool: if the graph contained only one node with one edge where the agent passed 200 times,
+		that means that there is something fishy about the navigation strategy.
+		Another good example was with the bee algorithm, where a lot of nodes where alone, with no neighbours.
+		In that case, it meant that the communication or the evaluation was wrong (either calling forager or the fitness were bad).
 		\begin{figure}[!h]
 			\hspace{-2cm}
 			\includegraphics[width=1.4\textwidth]{../dh_graph}
@@ -224,9 +232,25 @@
 	\subsection{Graph figures comparison}
 		\paragraph{}
 			We formulate in the hypothesis that the crawled graph must differ between every kind of agents.
-			To prove this, we have been using Gephi to dig out some figures of our graphs.
+			To prove this, we have been using Gephi
+			\footnote{Here is the software website \url{https://gephi.github.io/}} to dig out some figures of our graphs.
 			The more representation figures were the betweenness centrality and the clustering coefficient.
+			The work on the graph is based on the content of the class "Networks ans graphs" followed this year,
+			which was referenced on this book \cite{Steen10}.
 		\paragraph{}
+			For bees, we have a pretty high clustering coefficient of $0,026$ and the betweenness centrality is (on average) quite high.
+			The betweenness centrality is a number that calculate for each node how many shortest path go through it.
+			The highest this number is, the more important the node is.
+			With bees, we expect to find a lot of nodes with a high betweenness centrality because for each node where a bee arrives on,
+			there are $N$ potential foragers send from that node.
+			Also, the clustering coefficient that describe how bounded are the nodes.
+			With the bees, for the same reason that the one cited above,
+			nodes are really close one from each other and are more likely to create a cluster
+			(clusters are "natural" but relatively homogeneous groupings that are evident in a statistical population)
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_bees}
+			\captionof{figure}{Betweenness centrality figures for bees}
+		\end{figure}
 		
 \section{Main Problems faced}
 	\subsection{Dead end paths}
@@ -282,15 +306,4 @@
 \bibliographystyle{plain}
 \bibliography{bibliography}
 \addcontentsline{toc}{section}{Bibliography}
-	Papers :
-		\begin{itemh}
-			\item Hayes2014 RDFS 1.1 Semantics (section 9.2.1 gives a fair overview).
-			\item Pepijn Kroes, 2013, BNAIC poster.
-			\item Kathrin Dentlez, Christophe Gueret, Stefan Schlobach, IEEE full paper.
-		\end{itemh}
-	Other links :
-		\begin{itemh}
-			\item\url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/#rdfs-entailment}
-			\item \url{http://www.doc.gold.ac.uk/~mas02gw/prolog_tutorial/prologpages/index.html#menu}
-		\end{itemh}
 \end{document}
