Adding pictures to report

--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -251,6 +251,15 @@
 			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_bees}
 			\captionof{figure}{Betweenness centrality figures for bees}
 		\end{figure}
+		\paragraph{}
+			For random agents, the clustering coefficient is of $0$ and the betweenness centrality follow a classical curve.
+			We can conclude that the graph does not have clear clusters.
+			That was expected from the random graph, because the agents are just walking around.
+			The expected behaviour is to find them on the more important nodes, have a Page-rank like behaviour.
+		\begin{figure}[!h]
+			\includegraphics[width=1\textwidth]{dh_betweenness_centrality_random}
+			\captionof{figure}{Betweenness centrality figures for random agents}
+		\end{figure}
 		
 \section{Main Problems faced}
 	\subsection{Dead end paths}
